--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.1.7",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "react": "^18",
