--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
+    "@studio-freight/react-lenis": "^0.0.47",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.1.7",
     "next": "14.2.3",
+    "next-nprogress-bar": "^2.3.11",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
