feat: add package name

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@db/api",
+  "name": "@vesper/api",
   "version": "0.0.1",
-  "description": "API for db",
+  "description": "API for vesper",
   "author": {
     "email": "hi@jabed.dev",
     "name": "Jabed Zaman",
