refactor: project structure

--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -10,6 +10,7 @@
     "start": "vite preview"
   },
   "dependencies": {
+    "@million/lint": "1.0.0-rc.1",
     "@phosphor-icons/react": "^2.1.5",
     "@radix-ui/react-context-menu": "^2.1.5",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -25,6 +26,7 @@
     "axios": "^1.7.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "million": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
