--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -10,6 +10,7 @@
     "start": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.4.2",
     "@phosphor-icons/react": "^2.1.5",
     "@radix-ui/react-context-menu": "^2.1.5",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -27,11 +28,14 @@
     "clsx": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "yup": "^1.4.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
