--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -32,6 +32,7 @@
     "react-hook-form": "^7.51.5",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "redux-persist": "^6.0.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
