--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -45,6 +45,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "compression": "^1.7.4",
+    "dockerode": "^4.0.2",
     "helmet": "^7.1.0",
     "ms": "^2.1.3",
     "passport": "^0.7.0",
