--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@studio-freight/react-lenis": "^0.0.47",
+    "async-mutex": "^0.5.0",
     "axios": "^1.7.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
