--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -25,23 +25,18 @@
     "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-form": "^0.19.5",
     "async-mutex": "^0.5.0",
-    "axios": "^1.7.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "react": "^18.2.0",
-    "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
-    "redux-persist": "^6.0.0",
     "sonner": "^1.4.41",
-    "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "yup": "^1.4.0",
-    "zod": "^3.23.8"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
