--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@studio-freight/react-lenis": "^0.0.47",
@@ -25,6 +26,7 @@
     "react": "^18",
     "react-dom": "^18",
     "rehype-pretty-code": "^0.13.2",
+    "shiki": "^1.6.1",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
