--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -25,6 +25,8 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.1",
+    "@nestjs/terminus": "^10.2.3",
+    "@vesper/dal": "workspace:*",
     "compression": "^1.7.4",
     "helmet": "^7.1.0",
     "reflect-metadata": "^0.2.0",
